--- a/app/about/About.module.css
+++ b/app/about/About.module.css
@@ -3,12 +3,13 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  max-width: 1200px;
+  max-width: 1000px;
+  align-items: center;
   margin: 0 auto;
   padding: 2rem;
   background-color: var(--background-color, #a3b18a);
   font-family: 'Times';
-}
+ }
 
 /* Header styling */
 .header {
@@ -45,13 +46,13 @@
 /* Hero section styling */
 .hero {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   margin-bottom: 3rem;
 }
 
 .profileImage {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   border: 5px solid var(--border-color, #e2e8f0);
   object-fit: cover;
@@ -75,9 +76,9 @@
 .main {
   max-width: 800px;
   margin: 0 auto;
-  padding: 4rem 2rem;
   flex: 1;
   font-family: 'Times';
+  padding: 0;
 }
 
 /* Timeline styling */
