--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -6,6 +6,7 @@ body, html {
   background-color: #dad7cd;
   color: #333;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 /* App Container */
@@ -26,6 +27,8 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
+  position: fixed;
+  z-index: 10;
 }
 
 .nav-container {
