--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -34,7 +34,7 @@ main {
   font-family: 'Garamond';
 }
 
-/* Navbar Styles */
+/* Old Navbar Styles */
 .navbar {
   padding: 2rem;
   width: 100%;
@@ -59,21 +59,44 @@ main {
   padding: 0;
 }
 
-.navbar li {
-  margin: 0;
-}
 
-.navbar a {
+.navbar a { /* The color of links */
   text-decoration: none;
-  color: #4a4a6a;
+  color: #3f5621;
   font-weight: 500;
   font-size: 1.1rem;
-  transition: color 0.3s ease;
 }
 
-.navbar a:hover {
+.navbar a:hover { /* The color of links when you hover of them */
   color: #000;
 }
+
+/* New navbar styles */
+
+
+.navbar2 {
+  padding: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  z-index: 10;
+}
+
+.nav2-container {
+  background: white;
+  padding: 0.75rem 1.5rem;
+}
+
+.navbar2 ul {
+  list-style: none;
+  display: flex;
+  gap: 2.5rem;
+  margin: 0;
+  padding: 0;
+}
+
+
 
 /* About & Projects Page Container */
 .content-container {
@@ -83,3 +106,7 @@ main {
 }
 
 
+.returnBtn {
+  display: flex;
+  align-items: left;
+}
